syntax = "proto3";
import "query/queryElement.proto";
option java_package = "de.sg_o.proto.tagy.query";
option java_outer_classname = "NotNullProto";

//SpecVersion: 1

message NotNull {
  QueryElement queryElement = 1;
}