syntax = "proto3";
import "def/tagDefinition.proto";
option java_package = "de.sg_o.proto.tagy.query";
option java_outer_classname = "QueryElementProto";

//SpecVersion: 1

message QueryElement {
  TagDefinition tagDefinition = 1;
}